
syntax = "proto3";
package ns3;
import "proto/sl-sfnsf.proto";
message SlRlcPduInfoProto{
    uint32 lcid = 1;
    uint32 size = 2;
}

message NrSlSlotAllocProto {
    SfnSfProto sfn = 16;
    uint32 dstL2Id = 15;
    uint32 ndi = 14;
    uint32 rv = 13;
    uint32 priority = 12;
    repeated SlRlcPduInfoProto slRlcPduInfo = 17;
    uint32 mcs = 11;
    uint32 numSlPscchRbs = 10;
    uint32 slPscchSymStart = 9;
    uint32 slPscchSymLength = 8;
    uint32 slPsschSymStart = 7;
    uint32 slPsschSymLength = 6;
    uint32 slPsschSubChStart = 5;
    uint32 slPsschSubChLength = 1;
    uint32 maxNumPerReserve = 2;
    bool txSci1A = 3;
    uint32 slotNumInd = 4;

} 